c4prj1_deck/grade.txt
Grading at Sun Mar  7 19:12:23 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘add_empty_card’:
deck.c:18:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     empty.value = NULL;
                 ^
deck.c:19:16: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘void *’
     empty.suit = NULL;
                ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
